# shell-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config_example.json  config_example.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
services/config/: __init__.py
services/middlewares/: log.py  parameter.py
services/routers/: custom.py  default.py  service.py
shell_bot/: filters.py  main.py
shell_bot/config/: __init__.py
shell_bot/routers/: custom.py  default.py  service.py
src/config/: __init__.py
src/middlewares/: log.py
src/routers/: __init__.py  custom.py  default.py  service.py
